# Nutshell

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  dockerfile  pyproject.toml
backend/: prestartmigrations.sh  pyproject.toml
backend/src/: alembic.ini  config.py  enums.py  main.py
backend/src/alembic/: env.py
backend/src/alembic/versions/: 2026_05_09_1354-139ec68b8dd9_init.py  2026_05_14_1336-79631b196fe8_add_password_hash_to_users_table.py  2026_05_14_1550-0903734d8ba3_change_password_hash_type_from_bytes_to_.py  2026_05_26_1841-aefc1d1bcb61_init.py  2026_06_04_1331-790ffec2620b_add_custom_slug_column.py
backend/src/api/: __init__.py
backend/src/api/v1/: __init__.py  auth.py  links.py  users.py
backend/src/auth/: schemas.py  service.py  utils.py
backend/src/database/: __init__.py  abstract_db.py  async_pg.py  core.py
backend/src/dependencies/: auth.py  links.py  users.py
backend/src/links/: models.py  repository.py  schemas.py  service.py
backend/src/mixins/: models.py
backend/src/models_registry/: __init__.py
backend/src/users/: models.py  repository.py  schemas.py  service.py
backend/src/utils/: __init__.py  shortener.py
src/nutshell/: alembic.ini  config.py  enums.py  main.py  models.py
src/nutshell/Database/: __init__.py  core.py
src/nutshell/Links/: models.py  repository.py  views.py
src/nutshell/Utils/: __init__.py  shortener.py
src/nutshell/alembic/: env.py
src/nutshell/alembic/versions/: 2026_05_06_1843-5b0f1223ef6f_create_links_table.py  2026_05_06_1906-579da99acf4c_create_links_table.py  2026_05_06_1917-4b7581fad94d_create_links_table.py  2026_05_06_1919-a3ee793b44db_create_links_table.py  2026_05_06_1921-821543b8a44c_create_links_table.py  2026_05_06_1935-68d0850afd24_create_links_table.py  2026_05_07_1637-af8d9c6c20a0_init_links_table.py  2026_05_08_1009-aac6212d1510_add_users_and_links_relation.py  2026_05_08_1039-1421b38e35e5_fix_users_and_links_relation.py  2026_05_08_1041-3ba5ae8d20f2_final_fix_users_and_links_relation.py  2026_05_13_1640-337b895f8782_rename_short_code_to_slug.py
src/nutshell/alemdic/: env.py
src/nutshell/api/: __init__.py
src/nutshell/api/v1/: __init__.py  links.py  users.py
src/nutshell/api/v1/links/: repository.py  schemas.py  service.py  views.py
src/nutshell/auth/: utils.py
src/nutshell/database/: __init__.py  core.py
src/nutshell/database/links/: models.py
src/nutshell/database/users/: models.py
src/nutshell/links/: models.py  repository.py  schemas.py  service.py  views.py
src/nutshell/mixins/: models.py
src/nutshell/models/: __init__.py
src/nutshell/models_registry/: __init__.py
src/nutshell/users/: models.py  repository.py  schemas.py  service.py
src/nutshell/utils/: __init__.py  shortener.py
