[project]
name = "nutshell-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bandit>=1.9.4",
    "fastapi[standard]>=0.136.1",
    "mypy>=1.20.2",
    "pyjwt[crypto]>=2.12.1",
    "pytest-asyncio>=1.3.0",
    "sqlalchemy[asyncio]>=2.0.49",
]
