[project]
name = "nutshell-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.13"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "bcrypt>=5.0.0",
    "pyjwt[crypto]>=2.13.0",
    "asyncpg>=0.31.0",
    "sqlalchemy[asyncio]>=2.0.50",
    "alembic>=1.18.4",
]

[dependency-groups]
dev = [
    "ruff>=0.15.14",
    "bandit>=1.9.4",
    "mypy>=2.1.0",
    "pytest-asyncio>=1.4.0",
]


[tool.ruff]
preview = true
fix = true
target-version = "py312"
line-length = 80
src = ["src"]


[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",    # allow assert in tests
    "PLR2004", # magic numbers in tests are fine
    "S105",    # allow hardcoded passwords in tests (mocking)
    "D103",    # missing docstring in public function (tests)
]


[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint]
select = [
  "A",    # flake8-builtins
  "ASYNC",
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "C90",  # mccabe
  "COM",  # flake8-commas
  "D",    # pydocstyle
  "DTZ",  # flake8-datetimez
  "E",    # pycodestyle
  "ERA",  # flake8-eradicate
  "EXE",  # flake8-executable
  "F",    # pyflakes
  "FBT",  # flake8-boolean-trap
  "FLY",  # pyflint
  "FURB", # refurb
  "G",    # flake8-logging-format
  "I",    # isort
  "ICN",  # flake8-import-conventions
  "ISC",  # flake8-implicit-str-concat
  "LOG",  # flake8-logging
  "N",    # pep8-naming
  "PERF", # perflint
  "PIE",  # flake8-pie
  "PL",   # pylint
  "PT",   # flake8-pytest-style
  "PTH",  # flake8-use-pathlib
  "Q",    # flake8-quotes
  "RET",  # flake8-return
  "RSE",  # flake8-raise
  "RUF",  # ruff
  "S",    # flake8-bandit
  "SIM",  # flake8-simplify
  "SLF",  # flake8-self
  "SLOT", # flake8-slots
  "T100", # flake8-debugger
  "TRY",  # tryceratops
  "UP",   # pyupgrade
  "W",    # pycodestyle
  "YTT",  # flake8-2020
]
ignore = [
  "A005",   # allow to shadow stdlib and builtin module names
  # Different doc rules that we don't really care about:
  "D100",
  "D104",
  "D106",
  "D203",
  "D212",
  "D401",
  "D404",
  "D405",
  "D418",  # We should be able to add docstrings to `@overload` decorators
  "ISC001",  # implicit string concat conflicts with `ruff format`
  "ISC003",  # prefer explicit string concat over implicit concat
  "PLR09",   # we have our own complexity rules
  "PLR2004", # do not report magic numbers
  "PLR6301", # do not require classmethod / staticmethod when self not used
  "PLC0414", # do not raise on `as` re-exports
  "PLW2901", # allow to redefine iteration targets in for loops
  "TRY003",  # long exception messages from `tryceratops`
  "RUF029",  # we decide `async` functions based on API, not `await` usage
  "RUF067",
   "Q000",
  "Q003",
  "COM812",
  "ISC001",]  # wps handles `__init__.py` logic better


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
